Phase_1/Project-phase-1-starterkit/ParserL0.jj
PARSER_BEGIN(Parser)

import java.util.*;

public class Parser {
}

PARSER_END(Parser)

SKIP :
{
  " "
| "\t"
| "\r"
| "\n"
}

TOKEN :
{

  < LET : "let" >
  |
  < TRUE: "true" >
  |
  < FALSE: "false" >
  |
  < PLUS : "+" >
  |
  < MINUS : "-">
  |
  < STAR : "*">
  |
  < DIV : "/">
  |
  < LPAR : "(" >
  |
  < RPAR : ")" >
  |
  < LBRA : "{" >
  |
  < RBRA : "}" >
  |
  < EQUAL : "=" >
  |
  < COLON : ":" >
  |
  < SEMIC : ";" >
  |
  < TERM : ";;" >
  |
  < COMMA : "," >
  |
  < AND : "&&" >
  |
  < OR : "||" >
  |
  < EQ : "==" >
  |  
  < GT : ">" >
  |
  < LT : "<" >
  |
  < GTEQ : ">=" >
  |
  < LTEQ : "<=" >
  |
  < DIF : "~=" >
  |
  < NOT : "~" >
  |
  < ASSIGN : ":=" >
  |
  < BOX : "box" >
  |
  < IF : "if" >
  |
  < ELSE : "else" >
  |
  < WHILE : "while" >
  |
  < PRINT : "print" >
  |
  < PRINTLN : "println" >
  |
  < FN : "fn" >
  |
  <ARROW : "=>">
  |
  < String: "\"" ( (~["\"","\\"]) | ("\\" ( ["n","t","b","r","f","\\","\""] ) ) )* "\"" >
  |
  < Id: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )* >
  |
  < Num: (["0"-"9"]) + >
}

ASTNode Start():
{ ASTNode t; }
{
    <EOF> {return null;}
  | t = Let() <TERM> { return t; }
}

ASTNode Let() :
{ Token n; 
  ASTNode t, e1, e2;
  List<Bind> decls  = new ArrayList<Bind>();;
}
{ 
    (
    t = Seq()
    |
    ((<LET>  n=<Id>  <EQUAL> e1 = BA() <SEMIC>
      { decls.add(new Bind(n.image,e1)); }
     )+
        e2 = Seq() { t = new ASTLet(decls, e2); })
    )
    
   { return t; }
}

ASTNode Seq() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = SeqExp() ( ( op=<SEMIC> ) t2 = SeqExp() 
 		 {
		 /* missing AST build */
     } 
		)*
     { return t1; }  
}

ASTNode SeqExp() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = BA() ( ( op=<ASSIGN> ) t2 = BA() 
 		 {
		 /* missing AST build */
     } 
		)*
     { return t1; }  
}

ASTNode BA() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = BM() ( ( op=<OR> ) t2 = BM() 
 		 {
		 t1 = new ASTOr(t1, t2);
		 } 
		)*
     { return t1; } 
}

ASTNode BM() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Rel() ( ( op=<AND> ) t2 = Rel() 
 		 {
		 t1 = new ASTAnd(t1, t2);
 		 } 
		)*
     { return t1; } 
}


ASTNode Rel() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Exp() ( ( op=<EQ> | op=<GT> | op=<LT> | op=<GTEQ> | op=<LTEQ> | op=<DIF>) t2 = Exp() 
     	  	  {if (op.kind == EQ) t1 = new ASTEqual(t1, t2);
            else if (op.kind == GT) t1 = new ASTGreater(t1, t2);
            else if (op.kind == LT) t1 = new ASTLess(t1, t2);
            else if (op.kind == GTEQ) t1 = new ASTGreaterEq(t1, t2);
            else if (op.kind == LTEQ) t1 = new ASTLessEq(t1, t2);
            else if (op.kind == DIF)  t1 = new ASTDifferent(t1, t2);} 
		)?
     { return t1; } 
}


ASTNode Exp() :
{ Token op;
  ASTNode t1, t2; }
{
     t1=Term() ( ( op=<PLUS> | op=<MINUS> ) t2=Term() 
                 { if (op.kind == PLUS) 
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
                 } 
               ) *
     { return t1; } 
}

ASTNode Term() :
{Token op;
  ASTNode t1, t2;}
{
     t1 = Fact() (
     	  	 op=<STAR> t2 = Fact()   { t1 = new ASTMult(t1,t2); }
		 |
		 op=<DIV> t2 = Fact()  { t1 = new ASTDiv(t1,t2); }
		 |
		 op = <LPAR> t2 = Exp () <RPAR>  { t1 = t2; } 
		)*
     { return t1; } 
}


List<Bind> DeclList() :
{
  Token id;
  ASTNode e;
  List<Bind> ds = new ArrayList<Bind>();
}
{
  id = <Id> <EQUAL> e = BA() <SEMIC> { ds.add(new Bind(id.image, e)); }
  ( id = <Id> <EQUAL> e = BA() <SEMIC> { ds.add(new Bind(id.image, e)); } )*
  { return ds; }
}


ASTNode Fact() :
{ Token n, id1, idn; 
  ASTNode t, e1, e2, cond, a1, aN;
  List<Bind> decls;
  ASTNode  body, alt;
  List<String> args;
}
{
   (
      n=<Num> { t = new ASTInt(Integer.parseInt(n.image)); } 
    | n=<TRUE> { t = new ASTBool(true); }
    | n=<FALSE> { t = new ASTBool(false);}
    | n=<Id> { t = new ASTId(n.image); } 
    | <BOX> t=Fact() { /* missing AST for box */; t = null; }
    | <STAR> t=Fact() { /* missing AST for deref */; t = null; }
    | <MINUS> t=Fact() { t = new ASTNeg(t); }
    | <NOT> t=Fact() {  t = new ASTNot(t);  }
    | <IF> cond=BA() <LBRA> e1=Let() <RBRA> <ELSE> <LBRA> e2=Let() <RBRA> { t = new ASTIf(cond, e1, e2); }
    | <WHILE> t=BA() <LBRA> body=Let() <RBRA> { /* TBC */ t = null; }
    | <FN> id1=<Id> { { args = new ArrayList<String>(); args.add(id1.image); } }
      (<COMMA> idn=<Id> { args.add(idn.image); })*
      <ARROW> <LBRA> body=Let() <RBRA> { t = new ASTFn(args, body); }

    | <PRINT> t=Fact() { /* missing AST for print */; t = null;  }
    | <PRINTLN> t=Fact() {/* missing AST for println */; t = null;  }
    | <LPAR> t=Let() <RPAR> 
    | LOOKAHEAD(2) <LPAR> <LET> decls = DeclList() <SEMIC> body = Let() <RPAR> { t = new ASTLet(decls, body); }
    
    )

    ( <LPAR> a1=Let() { List<ASTNode> arglist = new ArrayList<ASTNode>(); arglist.add(a1);}
    ( <COMMA> aN=Let() { arglist.add(aN); } )*
    <RPAR> { t = new ASTApp(t, arglist); } )*

   { return t; }
}
